# infigraph

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  GRAMMAR_PLUGINS.md  LICENSE  NOTICE  README.md  SECURITY.md  install.ps1  install.sh  manifest.yaml  release.sh
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pages.yml  release.yml
assets/hooks/: terragraph-enforce.sh
crates/infigraph-cli/: Cargo.toml
crates/infigraph-cli/src/: analysis_commands.rs  config_targets.rs  group_commands.rs  hooks.rs  index.rs  info_commands.rs  install.rs  main.rs  search_commands.rs
crates/infigraph-confluence/: Cargo.toml
crates/infigraph-core/: Cargo.toml  build.rs
crates/infigraph-grammar-plugin/: Cargo.toml
crates/infigraph-grammar-plugin/src/: driver.rs  lib.rs  plugin.rs
crates/infigraph-mcp/: Cargo.toml
crates/infigraph-mcp/src/: compress.rs  lib.rs  main.rs  recovery.rs  session_context.rs  ui.html  web.rs
crates/infigraph-mcp/src/tools/: docs.rs  graph.rs  groups.rs  helpers.rs  index.rs  memory_context.rs  mod.rs  pipelines.rs  search.rs  session.rs  watch.rs
crates/infigraph-mcp/src/tools/analysis/: call_graph.rs  concerns.rs  config.rs  mod.rs  reflection.rs  structured.rs  taint.rs
crates/infigraph-mcp/src/web/: handlers_analysis.rs  mod.rs
crates/infigraph-mcp/tests/: compression_eval.rs  groups_watch_perf.rs  helpers_gaps.rs  parent_dir_search.rs  tool_dispatch.rs  tool_parity.rs  watcher_concurrency.rs  watcher_reindex.rs
docs/: CONTEXT-COMPRESSION.md  DOCUMENT-INDEXING.md  Gemfile  LM2.md  PLAN-context-compression.md  README.md  TEST_CONTEXT_GUIDE.md  WEBHOOK-REINDEX.md  _config.yml  custom-grammar-plugins.md  getting-started.md  index.md
driver/: build.sh
npm/: package.json
tests/fixtures/microservices/payment-service/: Cargo.toml
tests/fixtures/microservices/payment-service/src/: client.rs  handlers.rs  main.rs  models.rs
(+280 files in other folders)
