[package]
name = "infigraph-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for infigraph — AST-powered code analysis and impact review"

[[bin]]
name = "infigraph"
path = "src/main.rs"

[dependencies]
infigraph-core.workspace = true
infigraph-languages.workspace = true
infigraph-grammar-plugin = { path = "../infigraph-grammar-plugin" }
anyhow.workspace = true
serde_json.workspace = true
clap = { version = "4", features = ["derive"] }
dirs = "5"
ctrlc = "3"
rayon = "1"
