[package]
name = "infigraph-grammar-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime ANTLR grammar plugin system — load .g4 grammars via JVM subprocess"

[dependencies]
infigraph-core = { path = "../infigraph-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
toml = "0.8"
dirs-next = "2"
